--- a/aitu-masters/systems-analysis-design/practice_1/requirements.txt
+++ b/aitu-masters/systems-analysis-design/practice_1/requirements.txt
@@ -4,3 +4,8 @@ notebook
 networkx
 matplotlib
 fake-useragent
+packaging
+scipy # remove, because numpy have numpy.random.normal
+pyvis # remove, because need graph database
+nltk
+numpy
